--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,15 @@ nav.site-nav > i {
     font-weight: 700;
     line-height: 130%;
 }
-
+.sub-title {
+    color: #6D6F70;
+    text-align: center;
+    font-family: Lato;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
+}
 /* site banner start  */
 .site-banner {
     background: linear-gradient(0deg, #202121 1.04%, #181818 61.72%, #022432 133.91%);
@@ -189,7 +197,7 @@ nav.site-nav > i {
 .ray-img {
     position: absolute;
     right: 0;
-    top: 0;
+    top: -40px;
 }
 .site-banner-warp .grid {
     grid-template-columns: 1fr 1.2fr;
@@ -243,6 +251,60 @@ nav.site-nav > i {
     min-width: max-content;
 }
 
+.primary-btn {
+    background: linear-gradient(0deg, #02586A, #85C66A);
+    display: inline-block;
+    padding: 2px;
+    border-radius: 80px;
+    overflow: hidden;
+}
+.primary-btn-inner {
+    padding: 2px;
+    background: #313131;
+    border-radius: inherit;
+}
+.primary-btn a {
+    color: #FFF;
+    text-align: center;
+    font-family: Lato;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: capitalize;
+    min-width: max-content;
+    padding: 20px 30px;
+}
+.banner-img {
+    position: relative;
+}
+.speaker {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform: translate(-210px, 40px);
+    z-index: 1;
+}
+.speaker img {
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+}
+.speaker img[alt="soundwave"] {
+    margin-top: -150px;
+}
+.banner-img > figure {
+    position: relative;
+}
+.rec-asset {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 30px;
+}
 /* vdieo sec  */
 .video-sec video {
     display: block;
@@ -330,12 +392,25 @@ nav.site-nav > i {
     text-transform: capitalize;
 }
 /* testimonial end  */
+/* faq start  */
+.faq-sec {
+    padding: 80px 0;
+}
 /* site-footer */
 .site-footer {
     padding: 80px 0;
     background: #313131;
+    position: relative;
 }
-
+.dot-shape {
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+}
+.dot-shape img {
+    transform: translateY(calc(-50% + -10px));
+}
 .footer-content > h2 {
     text-align: center;
     font-family: Lato;
@@ -380,4 +455,17 @@ nav.site-nav > i {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+}
+.footer-middle .item {
+    text-align: center;
+}
+.footer-middle > .grid {
+    align-items: center;
+}
+.footer-middle p a {
+    font-weight: 400;
+    font-size: 29px;
+    display: inline-flex;
+    align-items: center;
+    gap: 30px;
 }
