--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ p{
 }
 
 header.site-header {
-    padding: 80px 0 0;
+    padding: 60px 0 0;
     position: absolute;
     top: 0;
     left: 0;
@@ -128,7 +128,7 @@ header.site-header .container{
 }
 nav.site-nav {
     width: 400px;
-    background: #ffffff57;
+    background: linear-gradient(0deg, #202121 1.04%, #181818 61.72%, #022432 133.91%);
     position: fixed;
     top: 0;
     right: 0;
@@ -137,8 +137,6 @@ nav.site-nav {
     transform: translateX(100%);
     padding: 80px;
 }
-
-
 
 nav.site-nav a {
     font-size: 30px;
@@ -153,14 +151,15 @@ nav.site-nav > i {
     position: absolute;
     top: 20px;
     right: 20px;
-    font-size: 30px;
-    background: #fff;
     border-radius: 50%;
     width: 35px;
     aspect-ratio: 1;
     text-align: center;
     display: block;
     cursor: pointer;
+    color: var(--green);
+    font-size: 35px;
+    transition: all 0.2s linear;
 }
 
 .menu-btn {
@@ -200,8 +199,9 @@ nav.site-nav > i {
     top: -40px;
 }
 .site-banner-warp .grid {
-    grid-template-columns: 1fr 1.2fr;
+    grid-template-columns: 1fr 1.4fr;
     grid-gap: 20px;
+    align-items: end;
 }
 .site-banner .container {
     height: 100%;
@@ -220,6 +220,7 @@ nav.site-nav > i {
     font-weight: 500;
     line-height: 125.5%;
     margin: 0 0 80px;
+    max-width: 530px;
 }
 .banner-content h2 b {
     font-weight: 700;
@@ -236,6 +237,10 @@ nav.site-nav > i {
     padding: 2px;
     background: #1d1e1e;
     border-radius: inherit;
+    transition: all 0.2s ease-in-out;
+}
+.M-clr_btn:hover .M-clr_btn-inner {
+    background: transparent;
 }
 .M-clr_btn a {
     padding: 10px 50px;
@@ -249,8 +254,14 @@ nav.site-nav > i {
     letter-spacing: 2.8px;
     text-transform: uppercase;
     min-width: max-content;
+    transition: all 0.2s ease-in-out;
 }
-
+.M-clr_btn:hover a {
+    background: transparent;
+    color: #fff;
+    -webkit-background-clip: inherit;
+    -webkit-text-fill-color: inherit;
+}
 .primary-btn {
     background: linear-gradient(0deg, #02586A, #85C66A);
     display: inline-block;
@@ -262,6 +273,10 @@ nav.site-nav > i {
     padding: 2px;
     background: #313131;
     border-radius: inherit;
+    transition: all 0.2s ease-in-out;
+}
+.primary-btn:hover .primary-btn-inner {
+    background: transparent;
 }
 .primary-btn a {
     color: #FFF;
@@ -320,15 +335,16 @@ nav.site-nav > i {
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     position: sticky;
     top: calc(var(--item) * 20px);
     min-height: 600px;
     border-radius: 60px;
     overflow: hidden;
     gap: 60px;
+    padding-top: 50px;
 }
 .stack-cards .card img {
     position: absolute;
@@ -473,8 +489,8 @@ nav.site-nav > i {
     -webkit-text-fill-color: transparent;
 }
 .the-diffrences-wrap {
-    max-width: 1150px;
-    margin: 80px auto 0;
+    max-width: 1200px;
+    margin: 100px auto 0;
 }
 .the-diffrences-wrap .grid {
     grid-template-columns: 1fr auto;
@@ -519,6 +535,9 @@ nav.site-nav > i {
     background-position: center;
     background-size: cover;
 }
+.benefits .container {
+    max-width: 1400px;
+}
 
 .benefits-list {
     display: grid;
@@ -562,6 +581,9 @@ nav.site-nav > i {
 .testimonial {
     padding: 80px 0 150px;
     background: url("../images/testimonial-bg.png");
+}
+.testimonial > .container {
+    max-width: 1360px;
 }
 .testimonial-card-warp {
     margin-top: 50px;
@@ -633,6 +655,9 @@ nav.site-nav > i {
     padding: 100px 0 150px;
     position: relative;
     overflow: hidden;
+}
+.faq-sec .container {
+    max-width: 1400px;
 }
 
 .faq-sec-content {
@@ -794,9 +819,27 @@ nav.site-nav > i {
     right: 0;
     transform: translateY(-50%);
     z-index: 1;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+    overflow: hidden;
+}
+.timing button:hover{
+    color: #fff;
+}
+.timing button::before {
+    content: "";
+    position: absolute;
+    background: var(--green);
+    inset: 0;
+    width: 0;
+    z-index: -1;
+    transition: all 0.2s ease-in-out;
+}
+.timing button:hover::before {
+    width: 100%;
 }
 .time {
-    font-size: max(30vw,200px );
+    font-size: min(35vw, 60rem );
     line-height: 1;
     font-family: 'Digital-7';
     color: var(--green);
@@ -839,7 +882,18 @@ nav.site-nav > i {
 .footer-social ul li a {
     color: #73AD59;
     font-size: 30px;
+    text-shadow: 0 50px #73AD59;
+    height: 40px;
+    overflow: hidden;
+    transition: all 0.2s linear;
 }
+.footer-social ul li a:hover {
+    text-shadow: 0 0px #73AD59;
+    }
+    
+    .footer-social ul li a:hover {
+        transform: scale(1.2);
+    }
 .footer-social p {
     color: #656565;
     text-align: center;
