--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* font-faimly  */
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=var(--rubik):ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=var(--rubik):ital,wght@0,300..900;1,300..900&display=swap');
 /*global start*/
 * {
     box-sizing: border-box;
@@ -26,7 +26,7 @@ body {
     --green:#85C66A;
     --light-green:rgba(0, 200, 136, 0.14);
     --light-gray:#667085;
-    --rubik: "Rubik", sans-serif;
+    --var(--rubik): "var(--rubik)", sans-serif;
     --dancing:"Dancing Script", cursive;
 }
 
@@ -220,7 +220,7 @@ nav.site-nav > i {
     font-weight: 500;
     line-height: 125.5%;
     margin: 0 0 80px;
-    max-width: 530px;
+    max-width: 90%;
 }
 .banner-content h2 b {
     font-weight: 700;
@@ -248,7 +248,7 @@ nav.site-nav > i {
     background: -webkit-linear-gradient(0deg, #02586a, #85c66a);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-family: var(--rubik);
+    font-family: var(--var(--rubik));
     font-size: 28px;
     font-weight: 500;
     letter-spacing: 2.8px;
@@ -344,7 +344,7 @@ nav.site-nav > i {
     border-radius: 60px;
     overflow: hidden;
     gap: 60px;
-    padding-top: 50px;
+    padding: 50px 20px;
 }
 .stack-cards .card img {
     position: absolute;
@@ -374,7 +374,7 @@ nav.site-nav > i {
 .stack-cards .card span {
     color: #FFF;
     text-align: center;
-    font-family: Rubik;
+    font-family: var(--rubik);
     font-size: 64px;
     font-style: normal;
     font-weight: 600;
@@ -400,10 +400,14 @@ nav.site-nav > i {
 }
 /* views-sec start  */
 .views-sec {
-    padding: 200px 0;
+    padding: 200px 0 120px;
+}
+.views-sec-wrap .grid {
+    grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
 }
 .views-card {
     text-align: center;
+    margin-bottom: 40px;
 }
 .views-card .top-content {
     background: #F1F1F1;
@@ -505,7 +509,7 @@ nav.site-nav > i {
 .media-logo span {
     width: 100%;
     color: #555D67;
-    font-family: var(--rubik);
+    font-family: var(--var(--rubik));
     font-size: 30px;
     font-style: normal;
     font-weight: 500;
@@ -568,7 +572,7 @@ nav.site-nav > i {
 }
 .check-list li p {
     color: #21273C;
-    font-family: Rubik;
+    font-family: var(--rubik);
     font-size: 30px;
     font-style: normal;
     font-weight: 400;
@@ -581,6 +585,9 @@ nav.site-nav > i {
 .testimonial {
     padding: 80px 0 150px;
     background: url("../images/testimonial-bg.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 .testimonial > .container {
     max-width: 1360px;
@@ -598,7 +605,8 @@ nav.site-nav > i {
     z-index: -1;
 }
 .testimonial-card-warp > .grid {
-    grid-gap: 60px;
+    grid-gap: min(4vw, 60px);
+    grid-template-columns: repeat(auto-fit, minmax(300px , 1fr));
 }
 .testimonial-content > p {
     color: #FFF;
@@ -616,11 +624,18 @@ nav.site-nav > i {
     max-width: 1080px;
     margin-left: auto;
 }
+.card_img {
+    overflow: hidden;
+}
 .card_img img {
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: all 0.2s ease-in-out;
+}
+.card_img:hover img {
+    transform: scale(1.1) skew(2deg, 2deg);
 }
 .card_content {
     background: #D9D9D9;
@@ -642,7 +657,7 @@ nav.site-nav > i {
 }
 .card_content p {
     color: #6D6F70;
-    font-family: Rubik;
+    font-family: var(--rubik);
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
@@ -730,7 +745,7 @@ nav.site-nav > i {
   
   .acc-content p {
     color: #21273C;
-    font-family: Rubik;
+    font-family: var(--rubik);
     font-size: 30px;
     font-style: normal;
     font-weight: 400;
@@ -738,7 +753,7 @@ nav.site-nav > i {
 }
 .acc-head h4 {
     color: #21273C;
-    font-family: Rubik;
+    font-family: var(--rubik);
     font-size: 32px;
     font-style: normal;
     font-weight: 700;
@@ -777,7 +792,7 @@ nav.site-nav > i {
 }
 .just-imagine-content h4, .just-imagine-content h3 {
     color: #555D67;
-    font-family: var(--rubik);
+    font-family: var(--var(--rubik));
     font-size: 48px;
     font-style: normal;
     font-weight: 700;
@@ -788,7 +803,7 @@ nav.site-nav > i {
 }
 .just-imagine-content p {
     color: #555D67;
-    font-family:var(--rubik);
+    font-family:var(--var(--rubik));
     font-size: 48px;
     font-style: normal;
     font-weight: 300;
@@ -808,7 +823,7 @@ nav.site-nav > i {
 }
 .timing button {
     color: #555D67;
-    font-family: var(--rubik);
+    font-family: var(--var(--rubik));
     font-size: 40px;
     font-weight: 500;
     line-height: 128.5%;
