--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,7 @@ nav.site-nav > i {
     flex-direction: column;
     margin-bottom: 40px;
     position: sticky;
-    top: calc(var(--item) * 20px);
+    top: calc(var(--item) * 40px);
     min-height: 600px;
     border-radius: 60px;
     overflow: hidden;
@@ -637,7 +637,7 @@ nav.site-nav > i {
     transition: all 0.2s ease-in-out;
 }
 .card_img:hover img {
-    transform: scale(1.1) skew(2deg, 2deg);
+    transform: scale(1.1);
 }
 .card_content {
     background: #D9D9D9;
