--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,14 @@
+@media (max-width: 1600px) {
+    .qoute-img {
+    position: absolute;
+    top: 300px;
+    width: calc(100% - 2%);
+    left: 1%;
+    }
+.qoute-img img {
+    width:200px!important;
+}
+}
 @media screen and (max-width:1400px){
     .acc-head {
         padding: 30px 30px 30px 120px;
@@ -11,6 +22,12 @@
     .acc-content p {
         font-size: 22px;
         line-height: normal;
+    }
+    .testimonial > .container > .qoute-img {
+        position: absolute;
+        top: 300px;
+        width: calc(100% - 4%);
+        left: 4%;
     }
 }
 @media screen and (max-width:1200px){
@@ -369,6 +386,9 @@
     }
     .acc-content p {
         font-size: 16px;
+    }
+    ul.cross-list {
+        display: none;
     }
 }
 
