--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,9 @@ nav.site-nav > i {
     width: 100%;
     position:relative;
 }
+.stack-cards .cards .card:last-child {
+    margin: 0;
+}
 .stack-cards .card {
     width: 100%;
     height: 100%;
