--- a/css/responsive.css
+++ b/css/responsive.css
@@ -250,6 +250,9 @@
     .cussive-line-shape {
         top: 180px;
     }
+    .testimonial {
+        padding: 80px 0 80px;
+    }
 }
 @media screen and (max-width:768px){
     .site-banner-warp .grid {
