--- a/css/responsive.css
+++ b/css/responsive.css
@@ -364,6 +364,9 @@
 }
 
 @media screen and (max-width:575px){
+    nav.site-nav {
+        width: 100%;
+    }
     .benefits {
         padding: 40px 0 80px;
     }
